Source/WebCore/platform/graphics/ca/PlatformCALayer.h
@@ -41,6 +41,8 @@
 #include <wtf/text/StringHash.h>
 #include <wtf/text/WTFString.h>
 
+OBJC_CLASS AVPlayerLayer;
+
 namespace WebCore {
 
 class PlatformCALayer;
@@ -62,6 +64,7 @@ public:
         LayerTypeTiledBackingLayer,
         LayerTypePageTiledBackingLayer,
         LayerTypeRootLayer,
+        LayerTypeAVPlayerLayer,
         LayerTypeCustom
     };
     enum FilterType { Linear, Nearest, Trilinear };
@@ -71,6 +74,8 @@ public:
     // This function passes the layer as a void* rather than a PlatformLayer because PlatformLayer
     // is defined differently for Obj C and C++. This allows callers from both languages.
     static PassRefPtr<PlatformCALayer> create(void* platformLayer, PlatformCALayerClient*);
+
+    PassRefPtr<PlatformCALayer> clone(PlatformCALayerClient*) const;
 
     ~PlatformCALayer();
     
@@ -227,8 +232,10 @@ public:
 
 protected:
     PlatformCALayer(LayerType, PlatformLayer*, PlatformCALayerClient*);
-    
+
 private:
+    AVPlayerLayer* playerLayer() const;
+
     PlatformCALayerClient* m_owner;
     LayerType m_layerType;
     
